--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -25,6 +25,7 @@ nav:
     - "Toon's Quest to Save the Infinite Yield Script": stories/toonsquesttosavetheinfiniteyieldscript.md
     - "Scott's Treasure Hunt": stories/scottstreasurehunt.md
     - "Games and The Age": stories/gamesandtheage.md
+    - "Infinite Yield: The Team Behind the Script": stories/infiniteyieldtheteambehindthescript.md
 
 
 markdown_extensions:
