--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -26,6 +26,7 @@ nav:
     - "Scott's Treasure Hunt": stories/scottstreasurehunt.md
     - "Games and The Age": stories/gamesandtheage.md
     - "Infinite Yield: The Team Behind the Script": stories/infiniteyieldtheteambehindthescript.md
+    - "Matt in the Backrooms": stories/mattinthebackrooms.md
 
 
 markdown_extensions:
