--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -27,6 +27,7 @@ nav:
     - "Games and The Age": stories/gamesandtheage.md
     - "Infinite Yield: The Team Behind the Script": stories/infiniteyieldtheteambehindthescript.md
     - "Matt in the Backrooms": stories/mattinthebackrooms.md
+    - "The Curse of the Abandoned Home": stories/thecurseoftheabandonedhome.md
 
 
 markdown_extensions:
