--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -28,6 +28,7 @@ nav:
     - "Infinite Yield: The Team Behind the Script": stories/infiniteyieldtheteambehindthescript.md
     - "Matt in the Backrooms": stories/mattinthebackrooms.md
     - "The Curse of the Abandoned Mansion": stories/thecurseoftheabandonedmansion.md
+    - "The Possessed Mansion: A Tale of Haunted Souls and Forbidden Knowledge": stories/thepossessedmansion.md
 
 
 markdown_extensions:
