--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -29,6 +29,7 @@ nav:
     - "Matt in the Backrooms": stories/mattinthebackrooms.md
     - "The Curse of the Abandoned Mansion": stories/thecurseoftheabandonedmansion.md
     - "The Possessed Mansion: A Tale of Haunted Souls and Forbidden Knowledge": stories/thepossessedmansion.md
+    - "Bomb Island": stories/bombisland.md
 
 
 markdown_extensions:
