--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -30,6 +30,7 @@ nav:
     - "The Curse of the Abandoned Mansion": stories/thecurseoftheabandonedmansion.md
     - "The Possessed Mansion: A Tale of Haunted Souls and Forbidden Knowledge": stories/thepossessedmansion.md
     - "Bomb Island": stories/bombisland.md
+    - "The Infinite Library": stories/theinfinitelibrary.md
 
 
 markdown_extensions:
