--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -31,6 +31,7 @@ nav:
     - "The Possessed Mansion: A Tale of Haunted Souls and Forbidden Knowledge": stories/thepossessedmansion.md
     - "Bomb Island": stories/bombisland.md
     - "The Infinite Library": stories/theinfinitelibrary.md
+    - "The Space-Time Crystal": stories/thespacetimecrystal.md
 
 
 markdown_extensions:
