--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -32,6 +32,7 @@ nav:
     - "Bomb Island": stories/bombisland.md
     - "The Infinite Library": stories/theinfinitelibrary.md
     - "The Space-Time Crystal": stories/thespacetimecrystal.md
+    - "The Arcane Order": stories/thearcaneorder.md
 
 
 markdown_extensions:
