--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -34,8 +34,8 @@ nav:
     - "The Space-Time Crystal": stories/thespacetimecrystal.md
     - "The Arcane Order": stories/thearcaneorder.md
     - "The Persistent Door":
-      - Entry: stories/thepersistentdoorentry.md
-      - Expanded: stories/thepersistentdoorexpanded.md
+      - "SCP Entry": stories/thepersistentdoorentry.md
+      - "Story Expanded": stories/thepersistentdoorexpanded.md
 
 
 markdown_extensions:
