--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -38,6 +38,7 @@ nav:
       - "Story Expanded": stories/thepersistentdoorexpanded.md
     - "Countdown to Catastrophe": stories/countdowntocatastrophe.md
     - "The Haunted House on the Corner": stories/thehauntedhouseonthecorner.md
+    - "The Discord Chat Leak": stories/thediscordchatleak.md
 
 
 markdown_extensions:
